--- a/nimbus-test/pom.xml
+++ b/nimbus-test/pom.xml
@@ -53,7 +53,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
@@ -70,7 +70,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin> 
+			</plugin>  -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
